--- a/src/www/remote_rotation/receiver.html
+++ b/src/www/remote_rotation/receiver.html
@@ -19,7 +19,7 @@
         <script type="text/javascript">
           alert("Loading...");
           $(document).ready(function() {
-            var socket = io.connect('http://localhost:2222');
+            var socket = io.connect('http://niftylettuce.com:3030');
             socket.on('connect', function() {
               alert("Connected");
             });
