--- a/src/www/remote_rotation/receiver.html
+++ b/src/www/remote_rotation/receiver.html
@@ -38,6 +38,6 @@
         </script>
     </head>
     <body>
-      <img src="/icon.png" />
+      <img id="img" src="/icon.png" />
     </body>
 </html>
