--- a/src/www/remote_rotation/receiver.html
+++ b/src/www/remote_rotation/receiver.html
@@ -7,10 +7,10 @@
         <style>
           #img {
             position: absolute;
-            left: 72px;
-            top: 72px;
-            width: 256px;
-            height: 256px;
+            left: 200px;
+            top: 100px;
+            width: 439px;
+            height: 617px;
           }
         </style>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
@@ -27,6 +27,7 @@
             socket.on('coords', function(obj) {
               if ( typeof obj !== 'object' ) {
                 var dataObj = JSON.parse(obj);
+                console.log(dataObj);
                 if (dataObj.type === "orientation") {
                   var rotate = 'rotate(' + dataObj.gamma*-1 + 'deg)';
                   var scale = 'scale(' + ((dataObj.beta/180)*2 + 1) + ')';
